feat: movie-service TMDB facade serves mapped, persisted data (ADR-010)
Supersedes ADR-003. The facade's job stops being "cache TMDB's bytes and
replay them" and becomes "own the data, present it in TMDB's shape" — a
byte-for-byte proxy doesn't showcase backend engineering, and the two
assumptions that justified it didn't hold up: the typed model was
incomplete rather than inherently lossy, and TMDB v3 is a fixed, not
actively churning, contract.

- Close the Movie/TmdbMovieResponse field gaps found while auditing this:
  original_title, belongs_to_collection, production_countries, video, and
  spoken_languages losing its ISO code (was flattened to List<String>).
  Also fixes a latent bug where ProductionCompany's logo_path/origin_country
  were silently dropped on every TMDB parse (no snake_case mapping existed).
- MovieService: every endpoint now persists, not just getMovieById. Detail
  stays read-through/save-through (MongoDB first, TMDB on miss). List/search/
  discover/similar/recommendations still ask TMDB live for ranking — its
  search index isn't being reimplemented — but every movie any endpoint
  returns is upserted, so the catalog grows from real traffic. Movie gains
  embedded videos/credits so append_to_response=videos,credits is served
  from MongoDB once synced once, matching TMDB's own merge behavior.
- Add TmdbClient.getUpcomingMovies/getNowPlayingMovies and a with_cast
  parameter on discoverMovies (both needed by the real React app's exact
  call shapes, checked directly against ~/Desktop/filmpire's TMDB.js).
- Rewrite TmdbFacadeController to serve typed, TMDB-shaped responses
  (snake_case via existing @JsonProperty-annotated client DTOs, reused for
  output) built from the persisted catalog, instead of raw cached strings.
  Upstream TMDB errors are replayed via RestClientResponseException's
  captured body/status rather than a custom raw-client exception type.
- Remove the now-superseded raw-passthrough machinery: TmdbFacadeService,
  TmdbDocu